--- a/ProgrammingCamp.Web/src/features/layout/Page.css
+++ b/ProgrammingCamp.Web/src/features/layout/Page.css
@@ -4,10 +4,11 @@
     flex: 1;
     margin: 68px 24px 80px;
     padding: 12px;
-  }
+}
 
 .page-header {
     font-size: 1.1rem;
     font-weight: bold;
     padding: 10px 3px 16px;
+    text-align: center;
 }
