--- a/ProgrammingCamp.Web/src/features/layout/Study.css
+++ b/ProgrammingCamp.Web/src/features/layout/Study.css
@@ -6,11 +6,11 @@
 
 .right-box{
     align-content: center;
-    width: 10%;
-    height: 85%; 
+    width: 130px;
+    height: 520px; 
     padding: 4px;
     float: right;
-    text-align: left;
+    text-align: center;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
