--- a/ProgrammingCamp.Web/src/features/authentication/Login.css
+++ b/ProgrammingCamp.Web/src/features/authentication/Login.css
@@ -1,4 +1,5 @@
 .form-container {
+    visibility: visible;
     background-color: hsl(0, 0%, 98%);
     border-radius: 4px;
     border-top: 5px solid  hsl(165, 68%, 61%);
@@ -20,6 +21,7 @@
 }
 
 .login-button {
+    position: absolute;
     align-self: flex-end;
     background-color: hsl(165, 0%, 80%);
     border: none;
@@ -29,7 +31,7 @@
     flex: 1;
     font-size: 1.1rem;
     height: 35px;
-    margin-top: 28px;
+    margin-top: 175px;
     width: 130px;
 }
 
@@ -42,15 +44,87 @@
     outline: none;
 }
 
-.login-button:disabled {
-    background-color: hsla(0, 0%, 90%, 1);
-    color: black;
-    cursor: not-allowed;
-}
-
 .login-form {
     display: flex;
     flex-direction: column;
     margin-left: 24px;
     margin-right: 48px;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: hsl(0, 0%, 98%);
+    border-radius: 4px;
+    border-top: 5px solid  hsl(165, 68%, 61%);
+    padding: 5px;
+    margin: auto;
+    height: 450px;
+    width: 350px;
+  }
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    padding-top: 1px;
+    padding: 2px;
+
+}
+  
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 2px;
+}
+
+.signUp-button {
+    position: absolute;
+    align-self: flex-start;
+    background-color: hsl(165, 0%, 80%);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.1rem;
+    margin-top: 175px;
+    height: 35px;
+    padding: 2px;
+    width: 130px;
+}
+.signUp-button:hover{
+    background-color:  hsl(165, 68%, 61%);
+}
+
+.submit-button {
+    position: relative;
+    background-color: hsl(165, 0%, 80%);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    flex: 1;
+    font-size: 1.1rem;
+    height: 35px;
+    margin-top: 0px;
+    width: 130px;
+}
+
+.submit-button:hover{
+    background-color:  hsl(165, 68%, 61%);
 }
