--- a/ProgrammingCamp.Web/src/features/layout/Results.css
+++ b/ProgrammingCamp.Web/src/features/layout/Results.css
@@ -1,4 +1,73 @@
-.main-div {
-    background-color: rgb(202, 49, 49);
-    
-}
+.main-div { 
+    width: 100%; 
+    height: 100%; 
+    text-align: center; 
+} 
+ 
+ 
+.right-box{ 
+    align-content: center; 
+    width: 130px; 
+    height: 520px; 
+    padding: 1px; 
+    float: right; 
+    text-align: left; 
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19); 
+} 
+ 
+.center-card{ 
+    display: inline-block; 
+    background-color: hsl(0,0%,98%); 
+    width: 500px; 
+    height: 300px; 
+    margin: 7% auto; 
+    line-height: 50px; 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+} 
+ 
+ 
+ 
+.left-box { 
+    align-content: center; 
+    width: 130px; 
+    height: 520px;  
+    padding: 1px; 
+    float: left; 
+    text-align: left; 
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19); 
+} 
+ 
+.left-nav { 
+    align-items: top; 
+    background-color: hsl(0, 0%, 98%); 
+    display: flex; 
+    font-size: 1.1rem; 
+    height: 100%; 
+    padding-top: 1px; 
+    padding-left: 0px; 
+    padding-right: 24px; 
+    border-bottom: 1px solid hsl(0, 0%, 90%); 
+} 
+ 
+.language-link { 
+    text-align: center; 
+    display: block; 
+    border-bottom: 4px solid transparent; 
+    color: hsl(0, 0%, 45%); 
+    height: 50px; 
+    width: 130px; 
+    line-height: 50px; 
+    text-decoration: none; 
+    white-space: nowrap; 
+} 
+ 
+.language-link:hover { 
+    background-color: hsl(0, 0%, 95%); 
+    color: hsl(0, 0%, 30%); 
+} 
+ 
+.navList{ 
+  list-style-type: none; 
+  margin: 0; 
+  padding: 0; 
+} 
