--- a/ProgrammingCamp.Web/src/features/layout/Study.css
+++ b/ProgrammingCamp.Web/src/features/layout/Study.css
@@ -14,8 +14,18 @@
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-.center-card{
+.center-card-question{
     display: inline-block;
+    background-color: hsl(0,0%,98%);
+    width: 500px;
+    height: 300px;
+    margin: 7% auto;
+    line-height: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.center-card-answer{
+    display: none;
     background-color: hsl(0,0%,98%);
     width: 500px;
     height: 300px;
