--- a/ProgrammingCamp.Web/src/features/layout/Results.css
+++ b/ProgrammingCamp.Web/src/features/layout/Results.css
@@ -9,9 +9,9 @@
     align-content: center; 
     width: 130px; 
     height: 520px; 
-    padding: 1px; 
+    padding: 2px; 
     float: right; 
-    text-align: left; 
+    text-align: center; 
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19); 
 } 
  
