--- a/ProgrammingCamp.Web/src/features/layout/NavBar.css
+++ b/ProgrammingCamp.Web/src/features/layout/NavBar.css
@@ -9,7 +9,7 @@
 }
 
 .logout-button:hover{
-    background-color:  hsl(165, 68%, 61%);
+    background-color:  #428e92;
 }
 
 .greeting {
@@ -18,38 +18,39 @@
 
 .navigation-container {
     align-items: center;
-    background-color: hsl(0, 0%, 98%);
+    background-color: #00363a;
     display: flex;
     font-size: 1.1rem;
     height: 54px;
     padding-left: 24px;
     padding-right: 24px;
-    border-bottom: 1px solid hsl(0, 0%, 90%);
+    padding-bottom: 0px;
+    border-bottom: 0px solid transparent;
 }
-
 .navigation-link {
     border-bottom: 4px solid transparent;
-    color: hsl(0, 0%, 45%);
+    color: hsl(0, 0%, 98%);
     height: 50px;
     line-height: 50px;
     padding: 0px 16px;
     text-decoration: none;
     white-space: nowrap;
+    background-color: #00363a;
 }
 
 .navigation-link:active {
-    background-color: hsl(0, 0%, 90%);
-    color: hsl(0, 0%, 30%);
+    background-color: #00363a;
+    color: hsl(0, 0%, 80%);
 }
 
 .navigation-link:hover {
-    background-color: hsl(0, 0%, 95%);
-    color: hsl(0, 0%, 30%);
+    background-color: #428e92;
+    color: hsl(0, 0%, 80%);
 }
 
 .navigation-link.selected {
-    border-bottom: 4px solid hsl(165, 68%, 61%);
-    color: hsl(0, 0%, 0%);
+    border-bottom: 4px solid #428e92;
+    color: hsl(0, 0%, 75%);
 }
 
 .settings-container {
