--- a/ProgrammingCamp.Web/src/features/layout/Results.css
+++ b/ProgrammingCamp.Web/src/features/layout/Results.css
@@ -12,7 +12,8 @@
     padding: 1px; 
     float: right; 
     text-align: left; 
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19); 
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+    background-color: #006064; 
 } 
  
 .center-card{ 
@@ -47,13 +48,14 @@
     padding-left: 0px; 
     padding-right: 24px; 
     border-bottom: 1px solid hsl(0, 0%, 90%); 
+    background-color: #006064;
 } 
  
-.language-link { 
+.language-link-results { 
     text-align: center; 
     display: block; 
     border-bottom: 4px solid transparent; 
-    color: hsl(0, 0%, 45%); 
+    color: hsl(0, 0%, 98%); 
     height: 50px; 
     width: 130px; 
     line-height: 50px; 
@@ -61,7 +63,7 @@
     white-space: nowrap; 
 } 
  
-.language-link:hover { 
+.language-link-results:hover { 
     background-color: hsl(0, 0%, 95%); 
     color: hsl(0, 0%, 30%); 
 } 
