--- a/ProgrammingCamp.Web/src/features/layout/Study.css
+++ b/ProgrammingCamp.Web/src/features/layout/Study.css
@@ -14,7 +14,8 @@
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-.center-card{
+
+.center-card-question{
     display: inline-block;
     background-color: hsl(0,0%,98%);
     width: 500px;
@@ -25,6 +26,15 @@
 }
 
 
+.center-card-answer{
+    display: none;
+    background-color: hsl(0,0%,98%);
+    width: 500px;
+    height: 300px;
+    margin: 7% auto;
+    line-height: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 .left-box {
     align-content: center;
@@ -66,7 +76,6 @@
     background-color: hsl(0, 0%, 95%);
     color: hsl(0, 0%, 30%);
 }
-
 .language-link:focus{
     border-bottom: 4px solid hsl(165, 68%, 61%);
 }
