--- a/ProgrammingCamp.Web/src/features/layout/Profile.css
+++ b/ProgrammingCamp.Web/src/features/layout/Profile.css
@@ -12,12 +12,13 @@
     align-items: center;
 }
 .score{
-    background: rgb(240, 236, 236);
+    background-color: #006064;
     width: 49%;
     text-align: center;
     font-size: 10px;
     float: right;
     text-align: center;
+    border-radius: 4px;
 }
 .points2{
     font-size: 50px;
@@ -28,10 +29,11 @@
     color: lightgreen;
 }
 .expert{
-    background: rgb(240, 236, 236);
+    background-color: #006064;
     float: left;
     text-align: center;
     width: 49%;
     font-size: 10px;
     text-align: center;
+    border-radius: 4px;
 }  
