--- a/ProgrammingCamp.Web/src/features/layout/Profile.css
+++ b/ProgrammingCamp.Web/src/features/layout/Profile.css
@@ -19,14 +19,15 @@
     float: right;
     text-align: center;
     border-radius: 4px;
+    color: #e6e6e6;
 }
 .points2{
     font-size: 50px;
-    color: lightblue;
+    color: white;
 }
 .points{
     font-size: 180px;
-    color: lightgreen;
+    color: #e6e6e6;
 }
 .expert{
     background-color: #006064;
@@ -36,4 +37,5 @@
     font-size: 10px;
     text-align: center;
     border-radius: 4px;
+    color: white
 }  
