--- a/ProgrammingCamp.Web/src/features/layout/Results.css
+++ b/ProgrammingCamp.Web/src/features/layout/Results.css
@@ -30,6 +30,7 @@
  
 .left-box { 
     align-content: center; 
+    background-color: #006064;
     width: 130px; 
     height: 520px;  
     padding: 1px; 
@@ -47,7 +48,7 @@
     padding-top: 1px; 
     padding-left: 0px; 
     padding-right: 24px; 
-    border-bottom: 1px solid hsl(0, 0%, 90%); 
+    border-bottom: 1px solid transparent;
     background-color: #006064;
 } 
  
@@ -76,32 +77,35 @@
 
 .right-nav { 
     align-items: top; 
-    background-color: hsl(0, 0%, 98%); 
+    background-color: #006064; 
     display: center; 
     font-size: 1 rem; 
     height: 100%; 
     padding-top: 1px; 
     padding-left: 0px; 
     padding-right: 0px; 
-    border-bottom: 1px solid hsl(0, 0%, 90%); 
+    border-bottom: 1px solid transparent; 
 } 
 .past-quiz{
-    text-align: center; 
-    display: block; 
-    color: hsl(0, 0%, 45%); 
-    padding:0;
-    background: none;
-    border:4px solid transparent;
-    height: 50px; 
-    width: 130px; 
-    line-height: 50px; 
-    text-decoration: underline; 
+    text-align: center;
+    display: block;
+    border-bottom: 4px solid transparent;
+    background-color: #006064;
+    color: hsl(0,0%,98%);
+    height: 50px;
+    width: 130px;
+    line-height: 50px;
+    text-decoration: none;
     white-space: nowrap;
+    outline: transparent;
+    border: transparent;
 }
 .past-quiz:hover {  
-    color: hsl(240, 74%, 45%); 
+    background-color: #00363a;
+    color: hsl(0, 0%, 98%);
+    cursor:pointer;
 } 
 
-.past-quiz:active {
-    color: hsl(240, 74%, 45%); 
+.past-quiz:focus {
+    border-bottom: 4px solid #428e92;
 }
